--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body class="bg-slate-100 p-4 md:p-8">
     <div class="max-w-2xl mx-auto bg-white p-8 rounded-xl shadow-lg border border-gray-200">
-        <h2 class="text-2xl font-black mb-6 text-blue-900 border-b-2 border-blue-100 pb-2 italic">JPNS-eReport
-            Submission</h2>
+        <h2 class="text-2xl font-black mb-6 text-blue-900 border-b-2 border-blue-100 pb-2 italic">New Activity Report
+        </h2>
 
         <form id="reportForm" class="space-y-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -43,7 +43,6 @@
                 <label class="block text-sm font-bold text-blue-800 mb-2">Upload Program Photos (Multiple)</label>
                 <input type="file" id="imageUpload" accept="image/*" multiple
                     class="w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-600 file:text-white hover:file:bg-blue-700 cursor-pointer">
-
                 <div id="previewGallery" class="grid grid-cols-3 sm:grid-cols-4 gap-2 mt-4"></div>
             </div>
 
@@ -60,8 +59,7 @@
         </form>
 
         <div class="mt-6 text-center">
-            <a href="dashboard.html" class="text-blue-600 hover:underline text-sm font-bold tracking-tight">← Back to
-                Dashboard</a>
+            <a href="dashboard.html" class="text-blue-600 hover:underline text-sm font-bold">← Back to Dashboard</a>
         </div>
     </div>
 
@@ -83,45 +81,55 @@
         const db = getFirestore(app);
         const storage = getStorage(app);
 
-        // --- IMAGE PREVIEW LOGIC ---
         const imageUpload = document.getElementById('imageUpload');
         const previewGallery = document.getElementById('previewGallery');
+        let selectedFiles = [];
 
-        imageUpload.addEventListener('change', () => {
-            previewGallery.innerHTML = ""; // Clear old previews
-            const files = Array.from(imageUpload.files);
+        imageUpload.addEventListener('change', (e) => {
+            const files = Array.from(e.target.files);
+            selectedFiles = [...selectedFiles, ...files];
+            updatePreviews();
+            imageUpload.value = "";
+        });
 
-            files.forEach(file => {
+        window.removeFile = (index) => {
+            selectedFiles.splice(index, 1);
+            updatePreviews();
+        };
+
+        function updatePreviews() {
+            previewGallery.innerHTML = "";
+            selectedFiles.forEach((file, index) => {
                 const reader = new FileReader();
                 reader.onload = (e) => {
-                    const img = document.createElement('img');
-                    img.src = e.target.result;
-                    img.className = "w-full h-20 object-cover rounded shadow-sm border border-white";
-                    previewGallery.appendChild(img);
+                    const div = document.createElement('div');
+                    div.className = "relative group";
+                    div.innerHTML = `
+                        <img src="${e.target.result}" class="w-full h-20 object-cover rounded shadow-sm border">
+                        <button type="button" onclick="removeFile(${index})" class="absolute -top-1 -right-1 bg-red-600 text-white rounded-full w-5 h-5 text-[10px] font-bold shadow-lg hover:bg-red-700">✕</button>
+                    `;
+                    previewGallery.appendChild(div);
                 };
                 reader.readAsDataURL(file);
             });
-        });
+        }
 
-        // --- SUBMISSION LOGIC ---
         document.getElementById('reportForm').addEventListener('submit', async (e) => {
             e.preventDefault();
             const btn = document.getElementById('btn');
-            const files = imageUpload.files;
             const progContainer = document.getElementById('progressContainer');
             const progBar = document.getElementById('progressBar');
 
-            if (files.length === 0) return alert("Please select at least one photo!");
+            if (selectedFiles.length === 0) return alert("Select at least one photo!");
 
             btn.disabled = true;
             btn.innerText = "UPLOADING...";
             progContainer.classList.remove('hidden');
 
             let urls = [];
-
             try {
-                for (let i = 0; i < files.length; i++) {
-                    const file = files[i];
+                for (let i = 0; i < selectedFiles.length; i++) {
+                    const file = selectedFiles[i];
                     const sRef = ref(storage, `images/${Date.now()}_${file.name}`);
                     const uploadTask = uploadBytesResumable(sRef, file);
 
@@ -130,7 +138,7 @@
                             (snap) => {
                                 const progress = (snap.bytesTransferred / snap.totalBytes) * 100;
                                 progBar.style.width = progress + "%";
-                                progBar.innerText = `PHOTO ${i + 1}/${files.length}: ${Math.round(progress)}%`;
+                                progBar.innerText = `PHOTO ${i + 1}/${selectedFiles.length}: ${Math.round(progress)}%`;
                             },
                             (err) => reject(err),
                             async () => {
@@ -141,8 +149,6 @@
                         );
                     });
                 }
-
-                btn.innerText = "SAVING REPORT...";
 
                 await addDoc(collection(db, "reports"), {
                     name: document.getElementById('userName').value,
@@ -156,14 +162,12 @@
                     createdAt: new Date()
                 });
 
-                alert("Successfully Submitted!");
+                alert("Submitted successfully!");
                 location.href = "dashboard.html";
-
             } catch (err) {
                 console.error(err);
-                alert("Upload failed! Please check your internet and Firebase Storage rules.");
+                alert("Upload failed.");
                 btn.disabled = false;
-                btn.innerText = "Retry Submission";
             }
         });
     </script>
