--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
             <select id="unit"
                 class="w-full p-2 border rounded bg-white shadow-sm outline-none focus:ring-2 focus:ring-blue-400">
-                <option value="Academic Unit">Academic Unit</option>
-                <option value="Student Affairs Unit">Student Affairs Unit</option>
-                <option value="Management Unit">Management Unit</option>
-                <option value="ICT Unit">ICT Unit</option>
+                <option value="Unit A">Unit A</option>
+                <option value="Unit B">Unit B</option>
+                <option value="Unit C">Unit C</option>
+                <option value="Unit D">Unit D</option>
             </select>
 
             <textarea id="description" rows="2" placeholder="Short Summary (for Dashboard)"
