--- a/dashboard.html
+++ b/dashboard.html
@@ -10,9 +10,12 @@
 <body class="bg-gray-100 p-6">
     <div class="max-w-6xl mx-auto">
         <div class="flex flex-col md:flex-row justify-between items-center mb-6 gap-4">
-            <div>
-                <h1 class="text-4xl font-black text-blue-900 italic tracking-tighter">JPNS-eReport</h1>
-                <p class="text-xs font-bold text-gray-400 uppercase">Monitoring & Documentation</p>
+            <div class="flex items-center gap-3">
+                <img src="logo.png" alt="Logo" class="h-12 w-auto">
+                <div>
+                    <h1 class="text-3xl font-black text-blue-900 italic leading-none">JPNS-eReport</h1>
+                    <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Activity Monitoring</p>
+                </div>
             </div>
 
             <div class="flex flex-wrap gap-3 items-center">
