--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 
 <body class="bg-slate-100 p-4 md:p-8">
     <div class="max-w-2xl mx-auto bg-white p-8 rounded-xl shadow-lg border border-gray-200">
-        <h2 class="text-2xl font-black mb-6 text-blue-900 border-b-2 border-blue-100 pb-2 italic">New Activity Report
-        </h2>
+        <div class="flex items-center gap-3">
+            <img src="KPM Logo.png" alt="Logo" class="h-12 w-auto">
+            <div>
+                <h1 class="text-3xl font-black text-blue-900 italic leading-none">eReport</h1>
+                <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Sektor Sumber dan Teknologi
+                    Pendidikan </p>
+            </div>
+        </div>
 
         <form id="reportForm" class="space-y-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
