--- a/view-report.html
+++ b/view-report.html
@@ -21,11 +21,17 @@
 
 <body class="bg-gray-50 p-4 md:p-10">
     <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 border shadow-sm rounded-lg report-box">
-        <div class="border-b-4 border-blue-900 pb-4 mb-8 flex justify-between items-end">
-            <div>
-                <h1 id="vProgram" class="text-4xl font-black text-slate-900 uppercase">...</h1>
-                <p id="vUnit" class="text-blue-600 font-bold tracking-widest uppercase mt-1"></p>
+        <div class="border-b-4 border-blue-900 pb-4 mb-8 flex justify-between items-center">
+            <div class="flex items-center gap-4">
+                <img src="KPM Logo.png" alt="JPNS Logo" class="h-16 md:h-20 w-auto object-contain">
+
+                <div>
+                    <h1 id="vProgram" class="text-3xl md:text-4xl font-black text-slate-900 uppercase leading-none">...
+                    </h1>
+                    <p id="vUnit" class="text-blue-600 font-bold tracking-widest uppercase mt-1"></p>
+                </div>
             </div>
+
             <div class="text-right">
                 <p id="vDate" class="text-gray-600 font-bold"></p>
                 <p id="vName" class="text-xs text-gray-400"></p>
@@ -93,6 +99,7 @@
                 document.getElementById('vFull').innerText = data.fullReport || "No detailed report available.";
 
                 const gallery = document.getElementById('vGallery');
+                gallery.innerHTML = ""; // Clear loader
                 (data.imageUrls || []).forEach(url => {
                     gallery.innerHTML += `<div class="bg-gray-100 rounded-lg overflow-hidden border shadow-sm hover:shadow-md transition"><img src="${url}" class="w-full h-auto"></div>`;
                 });
