fixed logo not appearing issue

--- a/view-report.html
+++ b/view-report.html
@@ -23,7 +23,7 @@
     <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 border shadow-sm rounded-lg report-box">
         <div class="border-b-4 border-blue-900 pb-4 mb-8 flex justify-between items-center">
             <div class="flex items-center gap-4">
-                <img src="KPM Logo.png" alt="JPNS Logo" class="h-16 md:h-20 w-auto object-contain">
+                <img src="KPM Logo.png" alt="KPM Logo" class="h-16 md:h-20 w-auto object-contain">
 
                 <div>
                     <h1 id="vProgram" class="text-3xl md:text-4xl font-black text-slate-900 uppercase leading-none">...
