--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
     <div class="max-w-6xl mx-auto">
         <div class="flex flex-col md:flex-row justify-between items-center mb-6 gap-4">
             <div class="flex items-center gap-3">
-                <img src="logo.png" alt="Logo" class="h-12 w-auto">
+                <img src="KPM Logo.png" alt="Logo" class="h-12 w-auto">
                 <div>
                     <h1 class="text-3xl font-black text-blue-900 italic leading-none">JPNS-eReport</h1>
                     <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Activity Monitoring</p>
