changed header and subheader for the form and dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>JPNS-eReport - Dashboard</title>
+    <title>SSTP-eReport - Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -13,8 +13,9 @@
             <div class="flex items-center gap-3">
                 <img src="KPM Logo.png" alt="Logo" class="h-12 w-auto">
                 <div>
-                    <h1 class="text-3xl font-black text-blue-900 italic leading-none">JPNS-eReport</h1>
-                    <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Activity Monitoring</p>
+                    <h1 class="text-3xl font-black text-blue-900 italic leading-none">eReport</h1>
+                    <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Sektor Sumber dan Teknologi
+                        Pendidikan</p>
                 </div>
             </div>
 
