--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JPNS-eReport - Submit</title>
+    <title>SSTP-eReport - Submit</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -15,7 +15,7 @@
             <div>
                 <h1 class="text-3xl font-black text-blue-900 italic leading-none">eReport</h1>
                 <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Sektor Sumber dan Teknologi
-                    Pendidikan </p>
+                    Pendidikan</p>
             </div>
         </div>
 
