--- a/view-report.html
+++ b/view-report.html
@@ -6,7 +6,13 @@
     <title>Full Report View</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        /* Ensures the printout is optimized for a single A4 page */
         @media print {
+            body {
+                background: white;
+                padding: 0;
+            }
+
             .no-print {
                 display: none !important;
             }
@@ -14,57 +20,86 @@
             .report-box {
                 border: none !important;
                 box-shadow: none !important;
+                width: 100% !important;
+                max-width: 100% !important;
+                padding: 0 !important;
             }
+
+            section {
+                page-break-inside: avoid;
+            }
+        }
+
+        /* Custom scrollbar for horizontal image row on screen */
+        .image-row::-webkit-scrollbar {
+            height: 4px;
+        }
+
+        .image-row::-webkit-scrollbar-thumb {
+            background: #cbd5e1;
+            border-radius: 10px;
         }
     </style>
 </head>
 
 <body class="bg-gray-50 p-4 md:p-10">
-    <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 border shadow-sm rounded-lg report-box">
-        <div class="border-b-4 border-blue-900 pb-4 mb-8 flex justify-between items-center">
-            <div class="flex items-center gap-4">
-                <img src="KPM Logo.png" alt="KPM Logo" class="h-16 md:h-20 w-auto object-contain">
+    <div
+        class="max-w-4xl mx-auto bg-white p-8 md:p-12 border shadow-sm rounded-lg report-box min-h-[1050px] flex flex-col">
 
+        <div class="border-b-4 border-blue-900 pb-4 mb-6 flex justify-between items-center">
+            <div class="flex items-center gap-3">
+                <img src="KPM Logo.png" alt="Logo" class="h-12 w-auto">
                 <div>
-                    <h1 id="vProgram" class="text-3xl md:text-4xl font-black text-slate-900 uppercase leading-none">...
-                    </h1>
-                    <p id="vUnit" class="text-blue-600 font-bold tracking-widest uppercase mt-1"></p>
+                    <h1 class="text-3xl font-black text-blue-900 italic leading-none">eReport</h1>
+                    <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Sektor Sumber dan Teknologi
+                        Pendidikan</p>
                 </div>
             </div>
-
             <div class="text-right">
-                <p id="vDate" class="text-gray-600 font-bold"></p>
-                <p id="vName" class="text-xs text-gray-400"></p>
+                <h2 id="vProgram" class="text-xl font-black text-slate-800 uppercase leading-tight">...</h2>
+                <p id="vUnit" class="text-blue-600 text-xs font-bold tracking-widest uppercase"></p>
             </div>
         </div>
 
-        <div class="space-y-10">
+        <div class="flex-grow space-y-6">
             <section>
-                <h2 class="text-sm font-black text-slate-400 tracking-tighter mb-2 uppercase italic">Program Objective
-                </h2>
-                <p id="vObjective" class="text-lg text-slate-700 leading-relaxed"></p>
+                <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Program
+                    Objective</h2>
+                <p id="vObjective" class="text-md text-slate-700 leading-snug border-l-2 border-blue-100 pl-4 italic">
+                </p>
             </section>
 
             <section>
-                <h2 class="text-sm font-black text-slate-400 tracking-tighter mb-2 uppercase italic">Detailed Report
-                </h2>
-                <div id="vFull"
-                    class="text-slate-700 leading-relaxed whitespace-pre-wrap border-l-4 border-gray-100 pl-6"></div>
-            </section>
-
-            <section>
-                <h2 class="text-sm font-black text-slate-400 tracking-tighter mb-4 uppercase italic">Photographic
+                <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-2 uppercase italic">Photographic
                     Evidence</h2>
-                <div id="vGallery" class="grid grid-cols-1 md:grid-cols-2 gap-6"></div>
+                <div id="vGallery" class="flex flex-row gap-2 overflow-x-auto pb-2 image-row">
+                </div>
+            </section>
+
+            <section>
+                <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Detailed Report
+                </h2>
+                <div id="vFull" class="text-sm text-slate-800 leading-relaxed whitespace-pre-wrap"></div>
             </section>
         </div>
 
-        <div class="mt-12 pt-8 border-t no-print flex gap-4">
+        <div class="mt-8 pt-4 border-t border-gray-100 flex justify-between items-end">
+            <div>
+                <p class="text-[10px] text-gray-400 uppercase font-bold">Reported By</p>
+                <p id="vName" class="text-md font-bold text-slate-700"></p>
+            </div>
+            <div class="text-right">
+                <p class="text-[10px] text-gray-400 uppercase font-bold">Date of Program</p>
+                <p id="vDate" class="text-md font-bold text-slate-700"></p>
+            </div>
+        </div>
+
+        <div class="mt-10 no-print flex gap-3">
             <button onclick="window.print()"
-                class="bg-blue-600 text-white px-8 py-3 rounded-xl font-bold shadow-lg hover:bg-blue-700 transition">Download
-                PDF Report</button>
+                class="bg-blue-600 text-white px-6 py-2 rounded-lg font-bold shadow-md hover:bg-blue-700 transition">Print
+                / Save PDF</button>
             <button onclick="window.location.href='dashboard.html'"
-                class="bg-gray-200 text-gray-700 px-8 py-3 rounded-xl font-bold">Back</button>
+                class="bg-gray-200 text-gray-700 px-6 py-2 rounded-lg font-bold">Back to Dashboard</button>
         </div>
     </div>
 
@@ -94,14 +129,17 @@
                 document.getElementById('vProgram').innerText = data.program;
                 document.getElementById('vUnit').innerText = data.unit;
                 document.getElementById('vDate').innerText = data.date;
-                document.getElementById('vName').innerText = "Compiled by: " + data.name;
+                document.getElementById('vName').innerText = data.name;
                 document.getElementById('vObjective').innerText = data.objective || "No objective stated.";
                 document.getElementById('vFull').innerText = data.fullReport || "No detailed report available.";
 
                 const gallery = document.getElementById('vGallery');
-                gallery.innerHTML = ""; // Clear loader
                 (data.imageUrls || []).forEach(url => {
-                    gallery.innerHTML += `<div class="bg-gray-100 rounded-lg overflow-hidden border shadow-sm hover:shadow-md transition"><img src="${url}" class="w-full h-auto"></div>`;
+                    // Images are set to a fixed height to keep them in one row
+                    gallery.innerHTML += `
+                        <div class="flex-shrink-0 w-32 h-24 bg-gray-100 rounded border overflow-hidden">
+                            <img src="${url}" class="w-full h-full object-cover">
+                        </div>`;
                 });
             } else {
                 alert("Report not found!");
