--- a/view-report.html
+++ b/view-report.html
@@ -6,7 +6,6 @@
     <title>Full Report View</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Ensures the printout is optimized for a single A4 page */
         @media print {
             body {
                 background: white;
@@ -25,81 +24,81 @@
                 padding: 0 !important;
             }
 
-            section {
-                page-break-inside: avoid;
+            /* Forces the browser to try and keep everything on one page */
+            .report-box {
+                height: 98vh;
             }
         }
 
-        /* Custom scrollbar for horizontal image row on screen */
-        .image-row::-webkit-scrollbar {
-            height: 4px;
-        }
-
-        .image-row::-webkit-scrollbar-thumb {
-            background: #cbd5e1;
-            border-radius: 10px;
+        /* Aspect ratio container for consistent image sizing */
+        .img-container {
+            aspect-ratio: 4 / 3;
+            width: 100%;
         }
     </style>
 </head>
 
 <body class="bg-gray-50 p-4 md:p-10">
-    <div
-        class="max-w-4xl mx-auto bg-white p-8 md:p-12 border shadow-sm rounded-lg report-box min-h-[1050px] flex flex-col">
+    <div class="max-w-4xl mx-auto bg-white p-8 md:p-12 border shadow-sm rounded-lg report-box flex flex-col justify-between"
+        style="min-height: 297mm;">
 
-        <div class="border-b-4 border-blue-900 pb-4 mb-6 flex justify-between items-center">
-            <div class="flex items-center gap-3">
-                <img src="KPM Logo.png" alt="Logo" class="h-12 w-auto">
-                <div>
-                    <h1 class="text-3xl font-black text-blue-900 italic leading-none">eReport</h1>
-                    <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Sektor Sumber dan Teknologi
-                        Pendidikan</p>
+        <div>
+            <div class="border-b-4 border-blue-900 pb-4 mb-6 flex justify-between items-center">
+                <div class="flex items-center gap-3">
+                    <img src="KPM Logo.png" alt="Logo" class="h-12 w-auto">
+                    <div>
+                        <h1 class="text-3xl font-black text-blue-900 italic leading-none">eReport</h1>
+                        <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Sektor Sumber dan Teknologi
+                            Pendidikan</p>
+                    </div>
+                </div>
+                <div class="text-right">
+                    <h2 id="vProgram" class="text-xl font-black text-slate-800 uppercase leading-tight">...</h2>
+                    <p id="vUnit" class="text-blue-600 text-[10px] font-bold tracking-widest uppercase"></p>
                 </div>
             </div>
-            <div class="text-right">
-                <h2 id="vProgram" class="text-xl font-black text-slate-800 uppercase leading-tight">...</h2>
-                <p id="vUnit" class="text-blue-600 text-xs font-bold tracking-widest uppercase"></p>
+
+            <div class="space-y-6">
+                <section>
+                    <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Program
+                        Objective</h2>
+                    <p id="vObjective"
+                        class="text-md text-slate-700 leading-snug border-l-2 border-blue-100 pl-4 italic"></p>
+                </section>
+
+                <section>
+                    <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-2 uppercase italic">Photographic
+                        Evidence</h2>
+                    <div id="vGallery" class="grid gap-2 w-full">
+                    </div>
+                </section>
+
+                <section>
+                    <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Detailed
+                        Report</h2>
+                    <div id="vFull" class="text-sm text-slate-800 leading-relaxed whitespace-pre-wrap"></div>
+                </section>
             </div>
         </div>
 
-        <div class="flex-grow space-y-6">
-            <section>
-                <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Program
-                    Objective</h2>
-                <p id="vObjective" class="text-md text-slate-700 leading-snug border-l-2 border-blue-100 pl-4 italic">
-                </p>
-            </section>
-
-            <section>
-                <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-2 uppercase italic">Photographic
-                    Evidence</h2>
-                <div id="vGallery" class="flex flex-row gap-2 overflow-x-auto pb-2 image-row">
-                </div>
-            </section>
-
-            <section>
-                <h2 class="text-[10px] font-black text-slate-400 tracking-widest mb-1 uppercase italic">Detailed Report
-                </h2>
-                <div id="vFull" class="text-sm text-slate-800 leading-relaxed whitespace-pre-wrap"></div>
-            </section>
-        </div>
-
-        <div class="mt-8 pt-4 border-t border-gray-100 flex justify-between items-end">
+        <div class="pt-4 border-t border-gray-100 flex justify-between items-end mb-4">
             <div>
-                <p class="text-[10px] text-gray-400 uppercase font-bold">Reported By</p>
+                <p class="text-[10px] text-gray-400 uppercase font-bold tracking-widest">Reported By</p>
                 <p id="vName" class="text-md font-bold text-slate-700"></p>
+                <div class="w-32 border-b border-gray-300 mt-8"></div>
             </div>
             <div class="text-right">
-                <p class="text-[10px] text-gray-400 uppercase font-bold">Date of Program</p>
+                <p class="text-[10px] text-gray-400 uppercase font-bold tracking-widest">Date of Program</p>
                 <p id="vDate" class="text-md font-bold text-slate-700"></p>
             </div>
         </div>
 
-        <div class="mt-10 no-print flex gap-3">
+        <div class="no-print flex gap-3 mb-4">
             <button onclick="window.print()"
-                class="bg-blue-600 text-white px-6 py-2 rounded-lg font-bold shadow-md hover:bg-blue-700 transition">Print
-                / Save PDF</button>
+                class="bg-blue-600 text-white px-6 py-2 rounded-lg font-bold shadow-md hover:bg-blue-700 transition">Download
+                PDF</button>
             <button onclick="window.location.href='dashboard.html'"
-                class="bg-gray-200 text-gray-700 px-6 py-2 rounded-lg font-bold">Back to Dashboard</button>
+                class="bg-gray-200 text-gray-700 px-6 py-2 rounded-lg font-bold">Back</button>
         </div>
     </div>
 
@@ -130,20 +129,23 @@
                 document.getElementById('vUnit').innerText = data.unit;
                 document.getElementById('vDate').innerText = data.date;
                 document.getElementById('vName').innerText = data.name;
-                document.getElementById('vObjective').innerText = data.objective || "No objective stated.";
-                document.getElementById('vFull').innerText = data.fullReport || "No detailed report available.";
+                document.getElementById('vObjective').innerText = data.objective || "N/A";
+                document.getElementById('vFull').innerText = data.fullReport || "No details provided.";
 
                 const gallery = document.getElementById('vGallery');
-                (data.imageUrls || []).forEach(url => {
-                    // Images are set to a fixed height to keep them in one row
+                const images = data.imageUrls || [];
+
+                // Logic: Automatically set grid columns based on image count (max 5 per row)
+                const count = images.length;
+                const cols = count > 5 ? 5 : count;
+                gallery.style.gridTemplateColumns = `repeat(${cols}, minmax(0, 1fr))`;
+
+                images.forEach(url => {
                     gallery.innerHTML += `
-                        <div class="flex-shrink-0 w-32 h-24 bg-gray-100 rounded border overflow-hidden">
+                        <div class="img-container bg-gray-50 rounded border overflow-hidden">
                             <img src="${url}" class="w-full h-full object-cover">
                         </div>`;
                 });
-            } else {
-                alert("Report not found!");
-                window.location.href = "dashboard.html";
             }
         }
     </script>
