--- a/view-report.html
+++ b/view-report.html
@@ -120,7 +120,7 @@
         </div>
 
         <!-- Footer Signatures -->
-        <div class="mt-5 pt-4 border-t-2 border-slate-100 flex justify-between items-end flex-shrink-0">
+        <div class="mt-auto pt-4 border-t-2 border-slate-100 flex justify-between items-end flex-shrink-0">
             <div>
                 <div class="w-40 border-b border-gray-300 mb-2 h-10"></div>
                 <p class="text-[10px] text-gray-400 uppercase font-bold tracking-widest mb-1">Reported By</p>
