changed unit names and removed short summary from index

--- a/dashboard.html
+++ b/dashboard.html
@@ -27,11 +27,13 @@
                 </div>
                 <select id="filterUnit"
                     class="p-2 border rounded-lg bg-white shadow-sm outline-none focus:ring-2 focus:ring-blue-400 text-sm font-semibold">
-                    <option value="All">All Units</option>
-                    <option value="Unit A">Unit A</option>
-                    <option value="Unit B">Unit B</option>
-                    <option value="Unit C">Unit C</option>
-                    <option value="Unit D">Unit D</option>
+                    <option value="Unit Dasat, Perkhidmatan dan Latihan">Unit Dasat, Perkhidmatan dan Latihan</option>
+                    <option value="Unit Pengurusan Sumber Pendidikan">Unit Pengurusan Sumber Pendidikan</option>
+                    <option value="Unit Pendidikan Digital">Unit Pendidikan Digital</option>
+                    <option value="Unit Rakaman dan Penyiaran">Unit Rakaman dan Penyiaran</option>
+                    <option value="Unit Pembangunan dan Bahan">Unit Pembangunan dan Bahan</option>
+                    <option value="Sektor Sumber dan Teknologi Pendidikan">Sektor Sumber dan Teknologi Pendidikan
+                    </option>
                 </select>
                 <a href="index.html"
                     class="bg-blue-600 text-white px-5 py-2 rounded-lg font-black shadow-md hover:bg-blue-700 transition">+
