--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
             <select id="unit"
                 class="w-full p-2 border rounded bg-white shadow-sm outline-none focus:ring-2 focus:ring-blue-400">
-                <option value="Unit A">Unit A</option>
-                <option value="Unit B">Unit B</option>
-                <option value="Unit C">Unit C</option>
-                <option value="Unit D">Unit D</option>
+                <option value="Unit Dasat, Perkhidmatan dan Latihan">Unit Dasat, Perkhidmatan dan Latihan</option>
+                <option value="Unit Pengurusan Sumber Pendidikan">Unit Pengurusan Sumber Pendidikan</option>
+                <option value="Unit Pendidikan Digital">Unit Pendidikan Digital</option>
+                <option value="Unit Rakaman dan Penyiaran">Unit Rakaman dan Penyiaran</option>
+                <option value="Unit Pembangunan dan Bahan">Unit Pembangunan dan Bahan</option>
+                <option value="Sektor Sumber dan Teknologi Pendidikan">Sektor Sumber dan Teknologi Pendidikan</option>
             </select>
 
-            <textarea id="description" rows="2" placeholder="Short Summary (for Dashboard)"
-                class="w-full p-2 border rounded outline-none focus:ring-2 focus:ring-blue-400 shadow-sm"></textarea>
             <div>
                 <textarea id="objective" rows="2" placeholder="Program Objective"
                     class="w-full p-2 border rounded outline-none focus:ring-2 focus:ring-blue-400 shadow-sm"></textarea>
