added back the all units selection for filter

--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
                 <option value="Unit Pendidikan Digital">Unit Pendidikan Digital</option>
                 <option value="Unit Rakaman dan Penyiaran">Unit Rakaman dan Penyiaran</option>
                 <option value="Unit Pembangunan dan Bahan">Unit Pembangunan dan Bahan</option>
-                <option value="Sektor Sumber dan Teknologi Pendidikan">Sektor Sumber dan Teknologi Pendidikan</option>
+                <option value="Sektor Sumber dan Teknologi Pendidikan">Sektor Sumber dan Teknologi Pendidikan
+                </option>
             </select>
 
+            <textarea id="description" rows="2" placeholder="Short Summary (for Dashboard)"
+                class="w-full p-2 border rounded outline-none focus:ring-2 focus:ring-blue-400 shadow-sm"></textarea>
             <div>
                 <textarea id="objective" rows="2" placeholder="Program Objective"
                     class="w-full p-2 border rounded outline-none focus:ring-2 focus:ring-blue-400 shadow-sm"></textarea>
