--- a/dashboard.html
+++ b/dashboard.html
@@ -27,6 +27,7 @@
                 </div>
                 <select id="filterUnit"
                     class="p-2 border rounded-lg bg-white shadow-sm outline-none focus:ring-2 focus:ring-blue-400 text-sm font-semibold">
+                    <option value="All">All Units</option>
                     <option value="Unit Dasat, Perkhidmatan dan Latihan">Unit Dasat, Perkhidmatan dan Latihan</option>
                     <option value="Unit Pengurusan Sumber Pendidikan">Unit Pengurusan Sumber Pendidikan</option>
                     <option value="Unit Pendidikan Digital">Unit Pendidikan Digital</option>
