updated unit names

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="KPM Logo.png" alt="Logo" class="h-12 w-auto">
             <div>
                 <h1 class="text-3xl font-black text-blue-900 italic leading-none">eReport</h1>
-                <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Sektor Sumber dan Teknologi
+                <p class="text-xs font-bold text-gray-400 uppercase tracking-widest">Sektor Pusat dan Teknologi
                     Pendidikan</p>
             </div>
         </div>
@@ -32,12 +32,12 @@
 
             <select id="unit"
                 class="w-full p-2 border rounded bg-white shadow-sm outline-none focus:ring-2 focus:ring-blue-400">
-                <option value="Unit Dasat, Perkhidmatan dan Latihan">Unit Dasat, Perkhidmatan dan Latihan</option>
-                <option value="Unit Pengurusan Sumber Pendidikan">Unit Pengurusan Sumber Pendidikan</option>
+                <option value="Unit Dasar dan Latihan">Unit Dasar dan Latihan</option>
+                <option value="Unit Pengurusan Pusat Sumber">Unit Pengurusan Pusat Sumber</option>
                 <option value="Unit Pendidikan Digital">Unit Pendidikan Digital</option>
                 <option value="Unit Rakaman dan Penyiaran">Unit Rakaman dan Penyiaran</option>
-                <option value="Unit Pembangunan dan Bahan">Unit Pembangunan dan Bahan</option>
-                <option value="Sektor Sumber dan Teknologi Pendidikan">Sektor Sumber dan Teknologi Pendidikan
+                <option value="Unit Pembangunan dan Bahan Interaktif">Unit Pembangunan dan Bahan Interaktif</option>
+                <option value="Unit Pelantar Pembelajaran">Unit Pelantar Pembelajaran
                 </option>
             </select>
 
