--- a/dashboard.html
+++ b/dashboard.html
@@ -28,12 +28,12 @@
                 <select id="filterUnit"
                     class="p-2 border rounded-lg bg-white shadow-sm outline-none focus:ring-2 focus:ring-blue-400 text-sm font-semibold">
                     <option value="All">All Units</option>
-                    <option value="Unit Dasat, Perkhidmatan dan Latihan">Unit Dasat, Perkhidmatan dan Latihan</option>
-                    <option value="Unit Pengurusan Sumber Pendidikan">Unit Pengurusan Sumber Pendidikan</option>
+                    <option value="Unit Dasar dan Latihan">Unit Dasar dan Latihan</option>
+                    <option value="Unit Pengurusan Pusat Sumber">Unit Pengurusan Pusat Sumber</option>
                     <option value="Unit Pendidikan Digital">Unit Pendidikan Digital</option>
                     <option value="Unit Rakaman dan Penyiaran">Unit Rakaman dan Penyiaran</option>
-                    <option value="Unit Pembangunan dan Bahan">Unit Pembangunan dan Bahan</option>
-                    <option value="Sektor Sumber dan Teknologi Pendidikan">Sektor Sumber dan Teknologi Pendidikan
+                    <option value="Unit Pembangunan dan Bahan Interaktif">Unit Pembangunan dan Bahan Interaktif</option>
+                    <option value="Unit Pelantar Pembelajaran">Unit Pelantar Pembelajaran
                     </option>
                 </select>
                 <a href="index.html"
