added new page for dropdown list of reporters along with their units

--- a/dashboard.html
+++ b/dashboard.html
@@ -36,6 +36,9 @@
                     <option value="Unit Pelantar Pembelajaran">Unit Pelantar Pembelajaran
                     </option>
                 </select>
+                <a href="staff-reports.html"
+                    class="bg-purple-600 text-white px-5 py-2 rounded-lg font-black shadow-md hover:bg-purple-700 transition">STAFF
+                    REPORTS</a>
                 <a href="index.html"
                     class="bg-blue-600 text-white px-5 py-2 rounded-lg font-black shadow-md hover:bg-blue-700 transition">+
                     NEW REPORT</a>
